--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 alloc-track = { version = "0.3.0", features = ["backtrace", "libc"], default-features = false }
+assert_no_alloc = { version = "1.1.2", features = ["warn_debug"] }
 clap = { version = "4.4.11", features = ["derive"] }
 libc = "0.2.151"
 signal-hook = "0.3.17"
