--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-alloc-track = { version = "0.3.0", features = ["backtrace", "libc"], default-features = false }
-assert_no_alloc = { version = "1.1.2", features = ["warn_debug"] }
 clap = { version = "4.4.11", features = ["derive"] }
 libc = "0.2.151"
-signal-hook = "0.3.17"
+serde = { version = "1.0.208", features = ["derive"] }
+serde_json = "1.0.125"
 
 [target."cfg(target_os = \"macos\")".dependencies.darwin-libproc]
 version = "0.2.0"
