--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.4.11", features = ["derive"] }
 libc = "0.2.151"
+mockall = "0.13.0"
 serde = { version = "1.0.208", features = ["derive"] }
 serde_json = "1.0.125"
 
