--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.4.11", features = ["derive"] }
+env_logger = "0.11.5"
 libc = "0.2.151"
+log = "0.4.22"
 mockall = "0.13.0"
 serde = { version = "1.0.208", features = ["derive"] }
 serde_json = "1.0.125"
