can't use variables in OS apparently

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Rust
+name: Build
 
 on:
   push:
@@ -43,17 +43,17 @@ jobs:
         # a list of all the targets
         include:
           - TARGET: x86_64-unknown-linux-gnu # tested in a debian container on a mac
-            OS: $UBUNTU
+            OS: ubuntu-20.04
           - TARGET: x86_64-unknown-linux-musl # test in an alpine container on a mac
-            OS: $UBUNTU
+            OS: ubuntu-20.04
           - TARGET: aarch64-unknown-linux-gnu # tested on aws t4g.nano
-            OS: $UBUNTU
+            OS: ubuntu-20.04
           - TARGET: aarch64-unknown-linux-musl # tested on aws t4g.nano in alpine container
-            OS: $UBUNTU
+            OS: ubuntu-20.04
           - TARGET: armv7-unknown-linux-gnueabihf # raspberry pi 2-3-4, not tested
-            OS: $UBUNTU
+            OS: ubuntu-20.04
           - TARGET: armv7-unknown-linux-musleabihf # raspberry pi 2-3-4, not tested
-            OS: $UBUNTU
+            OS: ubuntu-20.04
           - TARGET: x86_64-apple-darwin # tested on a mac, is not properly signed so there are security warnings
             OS: macos-latest
     needs: test
