--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -115,7 +115,7 @@ jobs:
       - name: Archive artifact
         uses: actions/upload-artifact@v4
         with:
-          name: result
+          name: result-${{ matrix.TARGET }}-${{ matrix.OS }}
           path: |
             ./artifacts
 
@@ -132,8 +132,9 @@ jobs:
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
-          name: result
+          pattern: result-*
           path: ./artifacts
+          merge-multiple: true
       - name: List
         run: find ./artifacts
       - name: Release
